<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/montserrat"
        android:textAppearance="@style/TextAppearance.Montserrat"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/montserrat_italic"
        android:textAppearance="@style/TextAppearance.Montserrat.Italic"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/montserrat_bold"
        android:textAppearance="@style/TextAppearance.Montserrat.Bold"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/montserrat_bold_italic"
        android:textAppearance="@style/TextAppearance.Montserrat.Bold.Italic"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:background="@color/colorBackground"
        android:text="@string/autosize"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Montserrat.Bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:targetApi="o" />

    <Switch
        android:id="@+id/autosize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/autosize"
        android:textAppearance="@style/TextAppearance.Montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnDefaultSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset_size"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Montserrat"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/autosize"
        app:layout_constraintStart_toEndOf="@+id/autosize"
        app:layout_constraintTop_toTopOf="@+id/autosize" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/radioRoboto"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtText">

        <RadioButton
            android:id="@+id/radioRoboto"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/roboto"
            android:textAppearance="@style/TextAppearance.Roboto" />

        <RadioButton
            android:id="@+id/radioQuicksand"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/quicksand"
            android:textAppearance="@style/TextAppearance.Quicksand" />

    </RadioGroup>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtText"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.Roboto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDefaultSize" />

</android.support.constraint.ConstraintLayout>